# flaxchat

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: deploy.yaml
configs/: d24.yaml
docs/: _config.yml  architecture.md  blog.md  config.md  contributing.md  deployment.md  index.md  optimizer.md
docs/_posts/: 2026-04-01-tinystories-experiment.md
flaxchat/: __init__.py  checkpoint.py  common.py  config.py  dataloader.py  dataset.py  engine.py  eval.py  execution.py  gpt.py  optim.py  prefetch.py  report.py  tokenizer.py
runs/: speedrun.sh
scripts/: chat_cli.py  chat_web.py  convert_to_tflite.py  eval.py  gen_synthetic.py  pretokenize_data.py  pretrain.py  rl.py  run_tinystories.py  sft.py  tok_train.py  train_gpt2.py  train_kaggle.py  train_local.py  train_tpu.py
tasks/: arc.py  common.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
tests/: conftest.py  test_checkpoint.py  test_common.py  test_config.py  test_dataloader.py  test_engine.py  test_eval.py  test_execution.py  test_model.py  test_optim.py  test_prefetch.py  test_tokenizer.py
torch_port/: README.md  configuration_gelu_gpt.py  configuration_yatnmn_gpt.py  convert_flax_to_torch.py  convert_yatnmn_flax_to_torch.py  eval_benchmarks.py  eval_quantization.py  eval_wikitext.py  modeling_gelu_gpt.py  modeling_yatnmn_gpt.py  requirements.txt  test_hf_generate.py  torch_gpt.py  validate_parity.py  validate_yatnmn_parity.py  yatnmn_gpt.py
